# wsjcpp-async-jobs-pool

./: .gitignore  CMakeLists.txt  README.md  wsjcpp.yml
src/: main.cpp  wsjcpp_async_jobs_pool.cpp  wsjcpp_async_jobs_pool.h
src.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_async_jobs_pool.cpp  unit_test_async_jobs_pool.h
